RESOLVED FIXED296802
Fix annotations guarding ServiceWorkersEnabled endpoints
https://bugs.webkit.org/show_bug.cgi?id=296802
Summary Fix annotations guarding ServiceWorkersEnabled endpoints
Darryl
Reported 2025-08-01 04:50:39 PDT
Fix annotations guarding ServiceWorkersEnabled endpoints
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-01 04:50:53 PDT
Darryl
Comment 2 2025-08-01 05:06:45 PDT
Note You need to log in before you can comment on or make changes to this bug.