Fix annotations guarding ServiceWorkersEnabled endpoints https://bugs.webkit.org/show_bug.cgi?id=296802 rdar://157291144

Reviewed by Sihui Liu.

Annotate endpoints with ServiceWorkersEnabled
Prevent incorrect annotations from being used in .messages.in files.

* LayoutTests/http/wpt/push-api/pushEvent.any.serviceworker.html:
* LayoutTests/http/wpt/push-api/pushManager.any.html:
* LayoutTests/http/wpt/push-api/pushManager.any.serviceworker.html:
* LayoutTests/http/wpt/push-api/pushSubscription.https.any.html:
* LayoutTests/http/wpt/push-api/pushSubscription.https.any.serviceworker.html:
* LayoutTests/http/wpt/push-api/pushSubscriptionChangeEvent.any.serviceworker.html:
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerDownloadTask.cpp:
(WebKit::ServiceWorkerDownloadTask::ServiceWorkerDownloadTask):
(WebKit::ServiceWorkerDownloadTask::sharedPreferencesForWebProcess const):
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerDownloadTask.h:
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerDownloadTask.messages.in:
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
(WebKit::ServiceWorkerFetchTask::sharedPreferencesForWebProcess const):
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.h:
* Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.messages.in:
* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.messages.in:
* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
(WebKit::WebSWServerToContextConnection::sharedPreferencesForWebProcess const):
* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerToContextConnection.h:
* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerToContextConnection.messages.in:
* Source/WebKit/Scripts/webkit/parser.py:
(parse):
(parse_coalescing_keys):
* Source/WebKit/UIProcess/WebProcessProxy.messages.in:

Canonical link: https://commits.webkit.org/298775@main